--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body class="page">
     <!--Header  -->
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header__container">
         <a class="logo header__logo" href="/"><span>Web</span>Studio</a>
         <nav class="nav">
@@ -32,9 +32,9 @@
             </li>
             <li class="nav__item"><a class="link nav__link" href="">Контакти</a></li>
           </ul>
-        </nav>
+        </nav> -->
         <!-- Contacts -->
-        <div class="contacts">
+        <!-- <div class="contacts">
           <ul class="list contacts__list">
             <li class="contacts__item">
               <a class="link contacts__link" href="mailto:info@devstudio.com">
@@ -55,17 +55,17 @@
           </ul>
         </div>
       </div>
-    </header>
+    </header> -->
     <!-- Hero -->
-    <main class="main">
+    <!-- <main class="main">
       <section class="hero with-image">
         <div class="container hero-container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button class="btn" type="button" data-modal-open>Замовити послугу</button>
-        </div>
+        </div> -->
 
         <!-- Modal window -->
-        <div class="backdrop is-hidden" data-modal>
+        <!-- <div class="backdrop is-hidden" data-modal>
           <div class="modal">
             <button class="modal-btn" type="button" data-modal-close>
               <svg class="modal-icon" width="18" height="18">
@@ -133,7 +133,7 @@
             </form>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!--Features -->
       <section class="section features">
@@ -494,7 +494,7 @@
       </section>
 
       <!-- Clients -->
-      <section class="section clients">
+      <!-- <section class="section clients">
         <div class="container">
           <h2 class="section__title">Постійні клієнти</h2>
           <ul class="list clients__list">
@@ -542,10 +542,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
     <!-- Footer -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-container">
         <div class="address-group">
           <a class="logo footer-logo" href="/"><span>Web</span>Studio</a>
@@ -651,7 +651,7 @@
           </div>
         </form>
       </div>
-    </footer>
+    </footer> -->
     <script src="./js/modal.js"></script>
   </body>
 </html>
