--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body class="page">
     <!--Header  -->
-    <!-- <header class="header">
+    <header class="header">
       <div class="container header__container">
         <a class="logo header__logo" href="/"><span>Web</span>Studio</a>
         <nav class="nav">
@@ -32,9 +32,9 @@
             </li>
             <li class="nav__item"><a class="link nav__link" href="">Контакти</a></li>
           </ul>
-        </nav> -->
+        </nav>
         <!-- Contacts -->
-        <!-- <div class="contacts">
+        <div class="contacts">
           <ul class="list contacts__list">
             <li class="contacts__item">
               <a class="link contacts__link" href="mailto:info@devstudio.com">
@@ -54,15 +54,67 @@
             </li>
           </ul>
         </div>
+
+        <button type="button" class="menu-btn js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+          <svg width="40" height="40">
+            <use href="./images/icons.svg#icon-mobile_menu"></use>
+          </svg>
+        </button>
       </div>
-    </header> -->
+
+      <!-- Mobile menu -->
+      <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="menu-toggle js-close-menu">
+      <svg width="40" height="40">
+      <use href="./images/icons.svg#icon-close_menu"></use>
+      </svg>
+      </button>
+
+      <ul class="mobile-menu list">
+        <li class="mobile-item">
+          <a href="" class="link">Студія</a>
+        </li>
+        <li class="mobile-item">
+          <a href="" class="link">Портфоліо</a>
+        </li>
+        <li class="mobile-item">
+          <a href="" class="link">Контакти</a>
+        </li>
+      </ul>
+
+      <ul class="mobile-contacts list">
+        <li class="mobile-tel">
+          <a href="" class="link">+38 096 111 11 11</a>
+        </li>
+        <li class="mobile-mail">
+          <a href="" class="link">info@devstudio.com</a>
+        </li>
+      </ul>
+
+      <ul class="mobile-socials list">
+        <li>
+          <a href="" class="link">Instagram</a>
+        </li>
+        <li>
+          <a href="" class="link">Twitter</a>
+        </li>
+        <li>
+          <a href="" class="link">Facebook</a>
+        </li>
+        <li>
+          <a href="" class="link">LinkedIn</a>
+        </li>
+      </ul>  
+    </div>
+
+    </header>
     <!-- Hero -->
-    <!-- <main class="main">
+    <main class="main">
       <section class="hero with-image">
         <div class="container hero-container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button class="btn" type="button" data-modal-open>Замовити послугу</button>
-        </div> -->
+        </div>
 
         <!-- Modal window -->
         <!-- <div class="backdrop is-hidden" data-modal>
@@ -494,7 +546,7 @@
       </section>
 
       <!-- Clients -->
-      <!-- <section class="section clients">
+      <section class="section clients">
         <div class="container">
           <h2 class="section__title">Постійні клієнти</h2>
           <ul class="list clients__list">
@@ -542,7 +594,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!-- Footer -->
     <!-- <footer class="footer">
@@ -653,5 +705,15 @@
       </div>
     </footer> -->
     <script src="./js/modal.js"></script>
+
+<!-- Mobile menu -->
+        <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/mobile-menu.js"></script>
+
   </body>
 </html>
