--- a/index.html
+++ b/index.html
@@ -55,7 +55,12 @@
           </ul>
         </div>
 
-        <button type="button" class="menu-btn js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+        <button
+          type="button"
+          class="menu-btn js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
           <svg width="40" height="40">
             <use href="./images/icons.svg#icon-mobile_menu"></use>
           </svg>
@@ -64,49 +69,48 @@
 
       <!-- Mobile menu -->
       <div class="menu-container js-menu-container" id="mobile-menu">
-      <button class="menu-toggle js-close-menu">
-      <svg width="40" height="40">
-      <use href="./images/icons.svg#icon-close_menu"></use>
-      </svg>
-      </button>
+        <button class="menu-toggle js-close-menu">
+          <svg width="40" height="40">
+            <use href="./images/icons.svg#icon-close_menu"></use>
+          </svg>
+        </button>
 
-      <ul class="mobile-menu list">
-        <li class="mobile-item">
-          <a href="" class="link">Студія</a>
-        </li>
-        <li class="mobile-item">
-          <a href="" class="link">Портфоліо</a>
-        </li>
-        <li class="mobile-item">
-          <a href="" class="link">Контакти</a>
-        </li>
-      </ul>
+        <ul class="mobile-menu list">
+          <li class="mobile-item">
+            <a href="" class="link">Студія</a>
+          </li>
+          <li class="mobile-item">
+            <a href="" class="link">Портфоліо</a>
+          </li>
+          <li class="mobile-item">
+            <a href="" class="link">Контакти</a>
+          </li>
+        </ul>
 
-      <ul class="mobile-contacts list">
-        <li class="mobile-tel">
-          <a href="" class="link">+38 096 111 11 11</a>
-        </li>
-        <li class="mobile-mail">
-          <a href="" class="link">info@devstudio.com</a>
-        </li>
-      </ul>
+        <ul class="mobile-contacts list">
+          <li class="mobile-tel">
+            <a href="" class="link">+38 096 111 11 11</a>
+          </li>
+          <li class="mobile-mail">
+            <a href="" class="link">info@devstudio.com</a>
+          </li>
+        </ul>
 
-      <ul class="mobile-socials list">
-        <li>
-          <a href="" class="link">Instagram</a>
-        </li>
-        <li>
-          <a href="" class="link">Twitter</a>
-        </li>
-        <li>
-          <a href="" class="link">Facebook</a>
-        </li>
-        <li>
-          <a href="" class="link">LinkedIn</a>
-        </li>
-      </ul>  
-    </div>
-
+        <ul class="mobile-socials list">
+          <li>
+            <a href="" class="link">Instagram</a>
+          </li>
+          <li>
+            <a href="" class="link">Twitter</a>
+          </li>
+          <li>
+            <a href="" class="link">Facebook</a>
+          </li>
+          <li>
+            <a href="" class="link">LinkedIn</a>
+          </li>
+        </ul>
+      </div>
     </header>
     <!-- Hero -->
     <main class="main">
@@ -115,9 +119,9 @@
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button class="btn" type="button" data-modal-open>Замовити послугу</button>
         </div>
-
-        <!-- Modal window -->
-        <!-- <div class="backdrop is-hidden" data-modal>
+      </section>
+      <!-- Modal window -->
+      <!-- <div class="backdrop is-hidden" data-modal>
           <div class="modal">
             <button class="modal-btn" type="button" data-modal-close>
               <svg class="modal-icon" width="18" height="18">
@@ -185,7 +189,8 @@
             </form>
           </div>
         </div>
-      </section> -->
+      
+      </section> 
 
       <!--Features -->
       <section class="section features">
@@ -597,7 +602,7 @@
       </section>
     </main>
     <!-- Footer -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-container">
         <div class="address-group">
           <a class="logo footer-logo" href="/"><span>Web</span>Studio</a>
@@ -703,17 +708,17 @@
           </div>
         </form>
       </div>
-    </footer> -->
+    </footer>
+    -->
     <script src="./js/modal.js"></script>
 
-<!-- Mobile menu -->
-        <script
+    <!-- Mobile menu -->
+    <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
       integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
       crossorigin="anonymous"
     ></script>
     <script defer src="js/mobile-menu.js"></script>
-
   </body>
 </html>
