--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
           <ul class="list contacts__list">
             <li class="contacts__item">
               <a class="link contacts__link" href="mailto:info@devstudio.com">
-                <svg class="contacts__icon" width="16" height="12">
+                <svg class="contacts__icon mail-icon" width="16" height="12">
                   <use href="./images/icons.svg#icon-envelope"></use>
                 </svg>
                 info@devstudio.com</a
@@ -46,7 +46,7 @@
             </li>
             <li class="contacts__item">
               <a class="link contacts__link" href="tel:+380961111111">
-                <svg class="contacts__icon" width="10" height="16">
+                <svg class="contacts__icon tel-icon" width="10" height="16">
                   <use href="./images/icons.svg#icon-smartphone"></use>
                 </svg>
                 +38 096 111 11 11</a
@@ -54,11 +54,100 @@
             </li>
           </ul>
         </div>
+
+        <button
+          type="button"
+          class="menu-btn js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg width="40" height="40">
+            <use href="./images/icons.svg#icon-mobile_menu"></use>
+          </svg>
+        </button>
+      </div>
+
+      <!-- Mobile menu -->
+      <div class="menu-container js-menu-container" id="mobile-menu">
+        <button class="menu-toggle js-close-menu">
+          <svg class="mobile-icon" width="40" height="40">
+            <use href="./images/icons.svg#icon-close_menu"></use>
+          </svg>
+        </button>
+
+        <ul class="mobile-menu list">
+          <li class="mobile-item">
+            <a href="./index.html" class="link">Студія</a>
+          </li>
+          <li class="mobile-item">
+            <a href="./portfolio.html" class="link current-link">Портфоліо</a>
+          </li>
+          <li class="mobile-item">
+            <a href="" class="link">Контакти</a>
+          </li>
+        </ul>
+
+        <ul class="mobile-contacts list">
+          <li class="mobile-tel">
+            <a href="" class="link">+38 096 111 11 11</a>
+          </li>
+          <li class="mobile-mail">
+            <a href="" class="link">info@devstudio.com</a>
+          </li>
+        </ul>
+
+        <ul class="mobile-socials list">
+          <li class="mobile-socials-item">
+            <a
+              href="https://www.instagram.com/"
+              class="link mobile-socials-link"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="Instagram"
+            >
+              Instagram
+            </a>
+          </li>
+          <li class="mobile-socials-item">
+            <a
+              href="https://twitter.com/"
+              class="link mobile-socials-link"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="Twitter"
+            >
+              Twitter
+            </a>
+          </li>
+          <li class="mobile-socials-item">
+            <a
+              href="https://www.facebook.com/"
+              class="link mobile-socials-link"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="Facebook"
+            >
+              Facebook
+            </a>
+          </li>
+          <li class="mobile-socials-item">
+            <a
+              href="https://www.linkedin.com/"
+              class="link mobile-socials-link"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="LinkedIn"
+            >
+              LinkedIn
+            </a>
+          </li>
+        </ul>
       </div>
     </header>
+
     <!-- Main content -->
     <main class="main">
-      <section class="portfolio">
+      <section class="section portfolio">
         <div class="container">
           <h1 hidden class="main-title">Портфоліо</h1>
           <!-- Filters -->
@@ -254,86 +343,90 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="container footer-container">
-        <div class="address-group">
-          <a class="logo footer-logo" href="/"><span>Web</span>Studio</a>
-          <address class="address">
-            <ul class="list address-list">
-              <li class="address-list-item">
+        <div class="footer-group">
+          <div class="address-group">
+            <a class="logo footer-logo" href="/"><span>Web</span>Studio</a>
+            <address class="address">
+              <ul class="list address-list">
+                <li class="address-list-item">
+                  <a
+                    class="link address-link"
+                    href="https://goo.gl/maps/gwhvkXHkBeZeqryQA"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                    >м. Київ, пр-т Лесі Українки, 26</a
+                  >
+                </li>
+                <li class="address-list-item">
+                  <a class="link address-contact-link" href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li class="address-list-item">
+                  <a class="link address-contact-link" href="tel:+380961111111"
+                    >+38 096 111 11 11</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="socials">
+            <h3 class="subtitle socials-subtitle">ПРИЄДНУЙТЕСЬ</h3>
+            <ul class="list socials-list">
+              <li class="socials-item">
                 <a
-                  class="link address-link"
-                  href="https://goo.gl/maps/gwhvkXHkBeZeqryQA"
+                  class="socials-link link footer-link"
+                  href="https://www.instagram.com/"
                   target="_blank"
-                  rel="noreferrer noopener"
-                  >м. Київ, пр-т Лесі Українки, 26</a
+                  rel="noopener noreferrer"
+                  aria-label="Instagram"
                 >
+                  <svg class="social-icon footer-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="address-list-item">
-                <a class="link address-contact-link" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
+              <li class="socials-item">
+                <a
+                  class="socials-link link footer-link"
+                  href="https://twitter.com/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Twitter"
                 >
+                  <svg class="social-icon footer-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="address-list-item">
-                <a class="link address-contact-link" href="tel:+380961111111">+38 096 111 11 11</a>
+              <li class="socials-item">
+                <a
+                  class="socials-link link footer-link"
+                  href="https://www.facebook.com/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Facebook"
+                >
+                  <svg class="social-icon footer-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-item">
+                <a
+                  class="socials-link link footer-link"
+                  href="https://www.linkedin.com/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Linkedin"
+                >
+                  <svg class="social-icon footer-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
-        </div>
-        <div class="socials">
-          <h3 class="subtitle socials-subtitle">ПРИЄДНУЙТЕСЬ</h3>
-          <ul class="list socials-list">
-            <li class="socials-item">
-              <a
-                class="socials-link link footer-link"
-                href="https://www.instagram.com/"
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="Instagram"
-              >
-                <svg class="social-icon footer-icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-instagram-2"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials-item">
-              <a
-                class="socials-link link footer-link"
-                href="https://twitter.com/"
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="Twitter"
-              >
-                <svg class="social-icon footer-icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-twitter-1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials-item">
-              <a
-                class="socials-link link footer-link"
-                href="https://www.facebook.com/"
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="Facebook"
-              >
-                <svg class="social-icon footer-icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-facebook-1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials-item">
-              <a
-                class="socials-link link footer-link"
-                href="https://www.linkedin.com/"
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="Linkedin"
-              >
-                <svg class="social-icon footer-icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-linkedin-1"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          </div>
         </div>
         <form class="subscription-form" name="subscription-form">
           <strong class="subscription-form-title subtitle">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</strong>
@@ -358,5 +451,14 @@
         </form>
       </div>
     </footer>
+
+    <!-- Mobile menu -->
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/mobile-menu.js"></script>
   </body>
 </html>
